performance tests concord

--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -721,7 +721,7 @@
     }
    ],
    "source": [
-    "perfomance(TabuSearch, 50, 1250, 50, opt='two_opt')"
+    "performance(TabuSearch, 50, 1250, 50, opt='two_opt')"
    ]
   },
   {
@@ -743,7 +743,7 @@
     }
    ],
    "source": [
-    "perfomance(TabuSearch, 50, 1250, 50, opt='lk_opt')"
+    "performance(TabuSearch, 50, 1250, 50, opt='lk_opt')"
    ]
   },
   {
@@ -765,7 +765,7 @@
     }
    ],
    "source": [
-    "perfomance(TabuSearch, 50, 1250, 50, opt='lkh_opt')"
+    "performance(TabuSearch, 50, 1250, 50, opt='lkh_opt')"
    ]
   },
   {
